--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>حاسبة الخدمة العسكرية</title>
+    <title>نظام احتساب الخدمة</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Add Babel for in-browser JSX & TypeScript transpilation -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
