--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>نظام احتساب الخدمة</title>
+    <title>حاسبة الخدمة العسكرية</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Add Babel for in-browser JSX & TypeScript transpilation -->
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="importmap">
 {
   "imports": {
@@ -186,6 +184,6 @@
   </head>
   <body class="bg-gray-100 dark:bg-gray-900">
     <div id="root"></div>
-    <script type="text/babel" data-type="module" src="./index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
